testdata/invalid/local_map_shadow.hzn
package probes

type Event struct {
    pid u32
}

map Events ringbuf[Event]

@tracepoint("sched:sched_process_exec")
func OnExec(ctx tracepoint.Exec) i32 {
    Events := 1
    return 0
}
